# AutoVideoSlice

./: .gitignore  LICENSE  README.md
.claude/: settings.local.json
backend/: .env.example  config.py  main.py  pyproject.toml
backend/api/: ai.py  analyze.py  export.py  score.py  subtitle.py  video.py
backend/models/: analysis.py  scoring.py  subtitle.py  video.py
backend/services/: analyzer.py  ffmpeg.py  prompts.py  scorer.py  subtitle.py  task_queue.py
backend/services/ai/: __init__.py  base.py  doubao.py  manager.py  ollama.py
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: CutProgress.css  CutProgress.jsx  ExportPanel.css  ExportPanel.jsx  FileUpload.css  FileUpload.jsx  Layout.css  Layout.jsx  ScoreCard.css  ScoreCard.jsx
frontend/src/services/: api.js
output/: .gitkeep
specs/: plan.md  progress.md  requirements.md  tasks.md
